--- a/LaTeX/Pantner27211195.tex
+++ b/LaTeX/Pantner27211195.tex
@@ -200,15 +200,15 @@ kjer je $\beta_A^\top = \begin{bmatrix}
 \[
     X_A = \begin{bmatrix}
         1 & 1 & 0 & 1 \\
-        1 & 1 & \sin\left(\pi/6\right) & \cos\left(\pi/6\right) \\
+        1 & 2 & \sin\left(\pi/6\right) & \cos\left(\pi/6\right) \\
         \vdots & \vdots & \vdots & \vdots \\
-        1 & 1 &  \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right) \\
-        1 & 2 & 0 & 1 \\
+        1 & 12 &  \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right) \\
+        1 & 13 & 0 & 1 \\
         \vdots & \vdots & \vdots & \vdots \\
-        1 & 2 &  \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right) \\
-        1 & 3 &  0 & 1 \\
+        1 & 24 &  \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right) \\
+        1 & 25 &  0 & 1 \\
         \vdots & \vdots & \vdots & \vdots \\
-        1 & 30 & \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right)\\
+        1 & 360 & \sin\left(11\pi/6\right) & \cos\left(11\pi/6\right)\\
         \end{bmatrix}.
 \]
 Torej je $X_A$ matrika velikosti $360 \times 4$. Predpostavimo, da je 
@@ -220,7 +220,7 @@ verjetja enaka
 Izračunamo
 \[
     \beta_A^\top = \begin{bmatrix}
-        10.747 & 0.056 & 0.039 & -10.379
+        10.784 & 0.047 & 0.056 & -10.375
     \end{bmatrix}.
 \]
 Prva komponenta nam pove, da imamo pozitiven trend, kar se sklada 
@@ -238,24 +238,24 @@ v letu posebej, torej
 \[
     X_B = \begin{bmatrix}
         1 & 1 & 0 & 0 & \cdots & 0 & 0 \\
-        1 & 0 & 1 & 0 & \cdots & 0 & 0 \\
+        2 & 0 & 1 & 0 & \cdots & 0 & 0 \\
         \vdots & & & & \ddots & & & \\
-        1 & 0 & 0 & 0 & \cdots & 0 & 1 \\
-        2 & 1 & 0 & 0 & \cdots & 0 & 0 \\
+        12 & 0 & 0 & 0 & \cdots & 0 & 1 \\
+        13 & 1 & 0 & 0 & \cdots & 0 & 0 \\
         \vdots & & & & \ddots & & & \\
-        2 & 0 & 0 & 0 & \cdots & 0 & 1 \\
-        3 & 1 & 0 & 0 & \cdots & 0 & 0 \\
+        24 & 0 & 0 & 0 & \cdots & 0 & 1 \\
+        25 & 1 & 0 & 0 & \cdots & 0 & 0 \\
         \vdots & & & & \ddots & & & \\
-        30 & 0 & 0 & 0 & \cdots & 0 & 1 
+        360 & 0 & 0 & 0 & \cdots & 0 & 1 
     \end{bmatrix}.
 \]
-To je ponovno matrika velikosti $360 \times 13$. V tem primeru je
+To je matrika velikosti $360 \times 13$. V tem primeru je
 \footnotesize
 \setcounter{MaxMatrixCols}{20}
 \[
     \beta_B^\top = \begin{bmatrix}
-        0.06 & 0.26 & 2.14 & 6.30 & 10.68 & 15.29 & 
-        19.56 & 21.21 & 20.48 & 15.44 & 10.88 & 5.82 & 0.92
+        0.005 & 0.32 & 2.19 & 6.35 & 10.72 & 15.32 & 
+        19.59 & 21.24 & 20.50 & 15.46 & 10.89 & 5.83 & 0.93
     \end{bmatrix}.
 \]
 \normalsize
@@ -271,7 +271,7 @@ Model je prikazan na sliki \ref{png:drugi}.
     tretjega modela.}
     \label{png:drugi}
 \end{figure}
-Tretji model je širši od prvega. Preizkusimo model $A$ znotraj 
+Drugi model je širši od prvega. Preizkusimo model $A$ znotraj 
 modela $B$, torej preizkusimo ničelno domnevo, da velja model $A$, 
 proti alternativni, da velja model $B$ z odvzetim podmodelom $A$.
 To lahko storimo na podlagi statistike
@@ -288,7 +288,7 @@ Izpeljava je na voljo v \cite{raic2}.
 
 V našem primeru je $p = 13$ in $q = 4$. Izračunamo 
 \[
-    F = 1{,}595, \quad
+    F = 1{,}621, \quad
     F^{-1}_{\fish(9,347)}(1-0{,}05) = 1{,}907 \quad \text{in} \quad
     F^{-1}_{\fish(9,347)}(1-0{,}01) = 2{,}459.
 \]
@@ -303,7 +303,7 @@ ki je v primeru linearne regresije in Gaussovega modela enaka
 \]
 kjer je $p$ število parametrov, $n$ število opažanj in $\RSS = \norm{Y - X\hat \beta}$.
 
-Akaikejeva informacija prvega modela je enaka $1261$,
+Akaikejeva informacija prvega modela je enaka $1262$,
 drugega pa $1265$. Torej ima model $A$ malenkost
 manjšo Akaikejevo informacijo in je primernejši.
 
